Copied contact from other crm project and populated with fake data

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,4 +2,5 @@
 <p>Main Menu:<p>
 <ul>
   <li><a href="/contacts">View All Contacts</a></li>
+  <li><a href="/contacts/new">Create New Contact</a></li>
 </ul>
