added some ugly ass styling. I am terrible at CSS

--- a/views/add_new_contact.erb
+++ b/views/add_new_contact.erb
@@ -1,9 +1,13 @@
 <h1>Create new Contact</h1>
 
 <form action="/contacts" method="post">
-  <input type="text" name="first_name">
-  <input type="text" name="last_name">
-  <input type="text" name="email">
-  <input type="text" name="note">
+  <label for="first">First Name</label>
+  <input type="text" name="first_name" id="first">
+  <label for="last">Last Name</label>
+  <input type="text" name="last_name" id="last">
+  <label for="email">E-Mail</label>
+  <input type="email" name="email" id"email">
+  <label for="note">Note</label>
+  <input type="text" name="note" id="note">
   <input type="submit" name="Submit">
 </form>
