Edit and delete functionality added

--- a/views/add_new_contact.erb
+++ b/views/add_new_contact.erb
@@ -6,7 +6,7 @@
   <label for="last">Last Name</label>
   <input type="text" name="last_name" id="last">
   <label for="email">E-Mail</label>
-  <input type="email" name="email" id"email">
+  <input type="email" name="email" id="email">
   <label for="note">Note</label>
   <input type="text" name="note" id="note">
   <input type="submit" name="Submit">
