--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,7 @@ dd {
   text-align: left;
   width: 15em;
   padding: 0.25em 0;
+  margin: 0;
 }
 dt {
   float: left;
@@ -32,9 +33,14 @@ dt {
   width: 8em;
   text-align: right;
   padding: 0.25em 0;
+  height: 1em;
+  margin: 0;
 }
 dt:after {
   content: " - ";
+}
+a.edit {
+  display: block;
 }
 nav.main_nav li {
   display: inline-block;
@@ -56,4 +62,13 @@ nav.main_nav ul {
   margin: 0;
   padding: 0;
   text-align: center;
+}
+input#first, input#last {
+  display: inline-block;
+  width: 10em;
+}
+input {
+  height: 1em;
+  padding: 0;
+  margin: 0;
 }
